feat(publication): add onlyLast query param to get the last publication of a user or it's own if no other user specified
